# CometVivado

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  check.py  explore.py  makefile
benchmarks/: makefile
benchmarks/dijkstra/: dijkstra.c  dijkstra.h  makefile
benchmarks/include/: matmul.h
benchmarks/matmul/: makefile  matmul.c
benchmarks/qsort/: makefile  qsort.c  qsort.h
benchmarks/simpleTest/: simpleTest  simpleTest.c
benchmarks/src/: matmul.c  qsort.c
benchmarks/syscalls/: makefile  test_csr.c  test_syscalls.c
catapult/: catapult.sh  design_vision_setup_script.tcl  designcompiler.sh  func.tcl  genCore.py
include/: CLI11.hpp  ac_int.h  alu.h  basic_simulator.h  cache.h  cacheMemory.h  core.h  elf.h  elfFile.h  incompleteMemory.h  logarithm.h  memory.h  memoryInterface.h  multicycleoperator.h  pipelineRegisters.h  portability.h  riscvISA.h  simpleMemory.h  simulator.h  syscall.h  syscalls.h
memories/: ST_SPHD_BB_4096x128m8_aTdol_wrapper.h  ST_SPHD_BB_4096x128m8_aTdol_wrapper.tcl  ST_SPHD_BB_4096x128m8_aTdol_wrapper_trans_rsc.h  ST_singleport_4096x128.lib
scripts/: .nfs00000000b15aebe900137e13  catapult.tcl  catapult_asic.tcl  catapult_xilinx.tcl
src/: atomicTest.cpp  basic_simulator.cpp  cache.cpp  core.cpp  elfFile.cpp  main.cpp  memory.cpp  memoryInterface.cpp  multicycleoperator.cpp  portability.cpp  reformeddm_sim.cpp  riscvISA.cpp  simpleMemory.cpp  simulator.cpp  syscall.cpp  syscalls.cpp  testbench.cpp
tests/: atomicTests  makefile  runTests.sh
tests/basic_tests/: makefile  runTests.sh
tests/basic_tests/dct/: dct.i  dct.riscv32  expectedOutput
tests/basic_tests/dijkstra/: dijkstra.c  makefile
tests/basic_tests/matmul/: makefile  matmul.h  matmul.riscv32
tests/basic_tests/qsort/: qsort.c  qsort.h
tests/dct/: dct  dct.c  dct.objdump  dct.riscv32  dct.s  makefile
tests/dijkstra/: dijkstra.c  dijkstra.h  dijkstra.riscv32  expectedOutput  makefile
tests/matmul/: expectedOutput  makefile  matmul.c  matmul.h  matmul.riscv32
tests/qsort/: expectedOutput  makefile  qsort.c  qsort.h  qsort.riscv32
tests/riscv-compliance/: Makefile.include
tests/riscv-compliance/comet/: link.ld  model_test.h
tests/riscv-compliance/comet/device/rv32i_m/I/: Makefile.include
vivado/: basic_simulator.cpp  basic_simulator.h  cometsim.pro  core.cpp  core.h  logarithm.h  main.cpp  memoryInterface.h  pipelineRegisters.h  riscvISA.cpp  simulator.h
